# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
  gen_determineargs.sh, gen_initramfs.sh, genkernel.conf:
  Add support for --firmware and --firmware-dir options to include firmware in
  the initramfs

  09 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> generic/linuxrc:
  Apply patch from Vince C <v_cadet@yahoo.fr> to mount sysfs prior to loading
  modules, so that the mdev firmware loading can actually work

  04 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh:
  If we have a raid456.ko module, we need to create a raid45.ko symlink since
  dmraid can be rather stupid. This should resolve bug #195804.

  04 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> sparc64/kernel-config,
  alpha/kernel-config-2.6, ia64/kernel-config-2.6, x86/kernel-config-2.6,
  x86_64/kernel-config-2.6:
  Updated the kernel configs for arches which have given us their 2008.0
  configs. This is 3.4.10_pre4 for testing.

  29 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Redirect which output to /dev/null and put quotes around var in test

  29 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  ia64/modules_load, ppc/modules_load, ppc64/modules_load, um/modules_load,
  x86_64/modules_load:
  Changed MDRAID to MDADM for bug #211316.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  gen_initramfs.sh, gen_initrd.sh, generic/initrd.scripts:
  Added a --no-keymap option for bug #210886.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  generic/linuxrc:
  Use which to determine the location of splash_geninitramfs, rather than
  having an endless number of conditional checks for the location. This fixes
  bug #211521. Thanks to Uriy Zhuravlev <stalkerg@gmail.com> for finding the
  problem and suggesting a solution.
