@@ -122,6 +122,10 @@ longusage() {
   echo "	--firmware-dir=<dir>"
   echo "				Specify directory to copy firmware from (defaults"
   echo "				to /lib/firmware)"
+  echo "	--firmware-files=<files>"
+  echo "				Specifies specific firmware files to copy. This"
+  echo "				overrides --firmware-dir. For multiple files,"
+  echo "				separate the filenames with a comma"
 }
 
 usage() {
@@ -489,6 +493,11 @@ parse_cmdline() {
 			CMD_FIRMWARE_DIR=`parse_opt "$*"`
 			CMD_FIRMWARE=1
 			print_info 2 "CMD_FIRMWARE_DIR: ${CMD_FIRMWARE_DIR}"
+			;;
+		--firmware-files=*)
+			CMD_FIRMWARE_FILES=`parse_opt "$*"`
+			CMD_FIRMWARE=1
+			print_info 2 "CMD_FIRMWARE_FILES: ${CMD_FIRMWARE_FILES}"
 			;;
 		all)
 			BUILD_KERNEL=1
