@@ -116,6 +116,7 @@ determine_real_args() {
 	set_config_with_override 1 MDADM                CMD_MDADM
 	set_config_with_override 1 FIRMWARE             CMD_FIRMWARE
 	set_config_with_override 2 FIRMWARE_DIR         CMD_FIRMWARE_DIR         "/lib/firmware"
+	set_config_with_override 2 FIRMWARE_FILES       CMD_FIRMWARE_FILES
 
 		BOOTDIR=`arch_replace "${BOOTDIR}"`
 		BOOTDIR=${BOOTDIR%/}    # Remove any trailing slash
