@@ -71,7 +71,10 @@ USECOLOR="yes"
 
 # Enable copying of firmware into initramfs
 # FIRMWARE="no"
+# Specify directory to pull from
 # FIRMWARE_DIR="/lib/firmware"
+# Specify specific firmware files to include. This overrides FIRMWARE_DIR
+# FIRMWARE_FILES=""
 
 # =========Low Level Compile Settings=========
 #
